[tool.ruff]
line-length = 155
target-version = "py311"

# Include useful rule sets
extend-select = [
  "E",   # pycodestyle (includes trailing newline W292)
  "F",   # pyflakes
  "B",   # flake8-bugbear
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "C90", # mccabe complexity
  "I",   # isort (import sorting)
  "W",   # additional warnings like W292
]

[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.0"       # для bson.json_util
requests = "^2.31.0"      # для HTTP-запросов

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"         # для тестов
mongomock = "^4.1.2"     # мок для MongoDB
